# learning_platform_drf

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
materials/: tasks.py  tests.py  urls.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0002_subject_course.py  0003_subscription.py  0004_alter_subscription_user.py
materials/models/: __init__.py  course.py  lesson.py  subject.py  subscription.py
materials/serializers/: __init__.py  course.py  lesson.py  subject.py  subscription.py
materials/services/: permissions.py
materials/validators/: validators.py
materials/views/: __init__.py  course.py  lesson.py  subject.py  subscription.py
payment/: models.py  srializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_payment_payment_id.py
payment/services/: payment.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
